--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,25 @@
       </div>
     </div>
   </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Asset</th>
+        <th scope="col">Project</th>
+        <th scope="col">Download</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% for (let i = 0; i < data.length; i++) { %>
+        <tr>
+          <td><%=data[i].filename%></td>
+          <td></td>
+          <td><a href="/download/<%= data[i].filename %>">Download</a></td>
+        </tr>
+      <% } %>
+     
+    </tbody>
+  </table>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
