Added project name and model

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,10 @@
             <input type="file" name="file" id="file" class="custom-file-input">
             <label for="file" class="custom-file-label">Choose File</label>
           </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Project Name</label>
+            <input type="text" required class="form-control" name="project_name" aria-describedby="emailHelp">
+          </div>
           <input type="submit" value="Submit" class="btn btn-primary btn-block">
         </form>
         <hr>
